--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
@@ -44,6 +45,5 @@
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-order": "4.1.0"
-    
   }
 }
