--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --runInBand  --detectOpenHandles --forceExit",
     "test-coverage": "jest --coverage",
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "debug": "nodemon server.js",
     "lint": "eslint --no-inline-config --ext .js,.jsx --no-error-on-unmatched-pattern -c .eslintrc.json .",
     "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
@@ -18,7 +19,7 @@
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "moment": "2.29.1",
     "mongodb": "3.6.2",
     "socket.io": "3.0.4",
