--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "cors": "2.8.5",
-    "dotenv": "8.2.0",
     "ejs": "3.1.5",
     "express": "4.17.1",
     "moment": "2.29.1",
@@ -32,14 +31,15 @@
     "@types/jest": "26.0.14",
     "axios": "0.21.1",
     "cheerio": "1.0.0-rc.5",
+    "dotenv": "^10.0.0",
     "eslint": "6.8.0",
     "eslint-config-trybe-backend": "1.0.3",
     "faker": "5.1.0",
     "jest": "26.5.2",
     "jest-puppeteer": "4.4.0",
     "jsdom": "16.4.0",
-    "nodemon": "2.0.7",
     "lodash": "4.17.20",
+    "nodemon": "2.0.7",
     "puppeteer": "5.3.1",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
