--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --runInBand  --detectOpenHandles --forceExit",
     "test-coverage": "jest --coverage",
     "start": "node server.js",
-    "debug": "nodemon server.js",
+    "dev": "nodemon server.js",
     "lint": "eslint --no-inline-config --ext .js,.jsx --no-error-on-unmatched-pattern -c .eslintrc.json .",
     "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
   },
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
