--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "2.8.5",
     "ejs": "3.1.5",
     "express": "4.17.1",
+    "express-rescue": "^1.1.31",
     "moment": "2.29.1",
     "mongodb": "3.6.2",
     "socket.io": "3.0.4",
