--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,7 @@
   "plugins": [
 		"stylelint-order"
 	],
+  "extends": ["stylelint-config-standard-scss"],
   "rules": {
     "at-rule-empty-line-before": "always",
     "at-rule-name-case": "lower",
