--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
     "express": "4.17.1",
-    "moment": "2.29.1",
+    "moment": "^2.29.1",
     "mongodb": "3.6.2",
     "socket.io": "3.0.4",
     "socket.io-client": "3.0.5",
@@ -42,8 +42,9 @@
     "lodash": "4.17.20",
     "nodemon": "2.0.7",
     "puppeteer": "5.3.1",
-    "stylelint": "13.8.0",
+    "stylelint": "14.0.0",
     "stylelint-config-standard": "20.0.0",
+    "stylelint-config-standard-scss": "^2.0.0",
     "stylelint-order": "4.1.0"
   }
 }
