--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "webchat",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "jest --runInBand  --detectOpenHandles --forceExit",
     "test-coverage": "jest --coverage",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "debug": "nodemon server.js",
     "lint": "eslint --no-inline-config --ext .js,.jsx --no-error-on-unmatched-pattern -c .eslintrc.json .",
-    "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input",
-    "watch": "nodemon --ext js,ejs,css"
+    "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +19,10 @@
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
     "express": "4.17.1",
-    "moment": "^2.29.1",
+    "moment": "2.29.1",
     "mongodb": "3.6.2",
     "socket.io": "3.0.4",
-    "socket.io-client": "3.0.5",
-    "unique-names-generator": "^4.6.0"
+    "socket.io-client": "3.0.5"
   },
   "devDependencies": {
     "@testing-library/dom": "7.24.5",
@@ -39,8 +38,8 @@
     "jest": "26.5.2",
     "jest-puppeteer": "4.4.0",
     "jsdom": "16.4.0",
-    "lodash": "4.17.20",
     "nodemon": "2.0.7",
+    "lodash": "4.17.20",
     "puppeteer": "5.3.1",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
