--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.6.1",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
