Feat: (req-3) Elabora o histórico do chat para que as mensagens persistam

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "startDB": "sudo service mongod start",
     "test": "jest --runInBand  --detectOpenHandles --forceExit",
     "test-coverage": "jest --coverage",
     "start": "node server.js",
